# Sanskrit-Env

./: .env.example  README.md  baseline.py  baseline_results.json  inference.py  pyproject.toml
server/: app.py  environment.py
server/static/: index.html
